# propwash

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  REVIEW_NOTES.md  dist-workspace.toml
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: ardupilot-dataflash-format.md  format-support.md  pid-tuning-plan.md  px4-ulog-format.md  ui-gap-analysis.md
propwash/: Cargo.toml
propwash-cli/: Cargo.toml
propwash-cli/src/: main.rs
propwash-cli/tests/: cli.rs
propwash-core/: Cargo.toml  KNOWN_ISSUES.md
propwash-core/examples/: bench.rs
propwash-core/src/: betaflight.rs  filter.rs  frame.rs  header.rs  lib.rs  predictor.rs  reader.rs  session.rs  types.rs  units.rs
propwash-core/src/analysis/: diagnostics.rs  episodes.rs  events.rs  fft.rs  mod.rs  pid.rs  step_response.rs  summary.rs  trend.rs  unified_events.rs  util.rs
propwash-core/src/format/: common.rs  mod.rs
propwash-core/src/format/ap/: build.rs  mod.rs  parser.rs  types.rs
propwash-core/src/format/bf/: analyzed.rs  build.rs  encoding.rs  frame.rs  frames.rs  header.rs  mod.rs  predictor.rs  types.rs
propwash-core/src/format/mavlink/: build.rs  mod.rs  parser.rs  types.rs
propwash-core/src/format/px4/: build.rs  mod.rs  parser.rs  types.rs
propwash-core/src/types/: analyzed.rs  mod.rs  raw.rs  unified.rs
propwash-core/tests/: integration.rs  integration.rs.bak  perf.rs  property.rs
propwash-core/tests/fixtures/: .gitignore  error-recovery.01.csv  error-recovery.01.event
propwash-core/tests/fixtures/cleanflight/: LOG00568.01.event  LOG00568.TXT  LOG00569.01.event  LOG00569.02.event  LOG00569.03.event  LOG00570.01.csv  LOG00570.01.event  LOG00570.02.event  LOG00571.01.event  LOG00571.02.event  LOG00572.01.csv  LOG00572.01.event  LOG00572.02.event  LOG00572.03.event
propwash-core/tests/fixtures/fc-blackbox/: LOG00037.BFL  btfl_001.01.csv  btfl_001.01.event  btfl_001.02.event  btfl_001.analysis.json  btfl_001.bbl  btfl_002.01.event  btfl_002.bbl  btfl_027.bbl  btfl_035.analysis.json  btfl_035.bbl  btfl_all.01.csv  btfl_all.01.event  btfl_all.04.event  btfl_all.12.csv  btfl_all.12.event  btfl_all.13.event  btfl_all.16.csv  btfl_all.16.event  btfl_all.20.csv  btfl_all.28.csv  btfl_all.28.event  btfl_all.33.csv  btfl_all.33.event  btfl_all.35.csv  btfl_all.35.event  btfl_all.bbl  btfl_gps_rescue.bbl
propwash-core/tests/fixtures/rotorflight/: LOG246.TXT
propwash-web/: Cargo.toml
propwash-web/src/: lib.rs
propwash-web/tests/: bridge.rs
propwash/src/: episodes.rs  main.rs
scripts/: compare_official.py
test-data/: README.md
web/: CNAME  app.js  build.mjs  index.html  package-lock.json  package.json  style.css  sw-killswitch.js  sw.template.js  tsconfig.json
web/src/: app.ts  chart-config.ts  format.test.ts  format.ts  globals.d.ts  sensor-field.ts  state.ts  types.ts  wasm.d.ts
web/src/views/: compare.ts  overview.ts  raw.ts  spectrum.ts  timeline.ts  trend.ts
