[workspace]
resolver = "2"
members = ["propwash-core", "propwash-cli", "propwash-web"]

[workspace.package]
edition = "2021"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
