[package]
name = "propwash-cli"
version = "0.5.1"
edition.workspace = true
description = "Flight log vibration analyzer CLI"
repository = "https://github.com/Iteratrix/propwash"
license = "MIT"

[dependencies]
propwash-core = { path = "../propwash-core", features = ["raw"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
