[package]
name = "propwash-cli"
version = "0.9.2"
edition.workspace = true
description = "Flight log vibration analyzer CLI"
repository = "https://github.com/Iteratrix/propwash"
license = "MIT"

[dependencies]
propwash-core = { path = "../propwash-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
