[package]
name = "propwash-core"
version = "0.9.2"
edition.workspace = true
description = "Lenient parser for flight controller blackbox logs"
repository = "https://github.com/Iteratrix/propwash"
license = "MIT"

[features]
default = []
## Expose format-specific raw types (BfRawSession, etc.).
## These types may change between minor versions.
raw = []

[dependencies]
az = "1"
memchr = "2"
rustfft = "6"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"
serde_json = "1"

[lints]
workspace = true
