[package]
name = "propwash-core"
version = "0.11.0"
edition.workspace = true
description = "Lenient parser for flight controller blackbox logs"
repository = "https://github.com/Iteratrix/propwash"
license = "MIT"

[dependencies]
az = "1"
bytemuck = { version = "1", features = ["derive"] }
memchr = "2"
rustfft = "6"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1"
serde_json = "1"

[lints]
workspace = true
