[package]
name = "propwash-core"
version = "0.11.0"
edition.workspace = true
description = "Lenient parser for flight controller blackbox logs"
repository = "https://github.com/Iteratrix/propwash"
license = "MIT"

[dependencies]
az = "1"
bytemuck = { version = "1", features = ["derive"] }
memchr = "2"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
tsify-next = { version = "0.5", optional = true, default-features = false, features = ["js"] }
wasm-bindgen = { version = "0.2", optional = true }

[features]
# Enable Tsify derives + wasm-bindgen ABI on public types (SensorField,
# Axis, RcChannel, MotorIndex). Off by default — only the WASM crate
# turns it on.
wasm = ["dep:tsify-next", "dep:wasm-bindgen"]

[dev-dependencies]
proptest = "1"
serde_json = "1"

[lints]
workspace = true
